--- a/src/style.css
+++ b/src/style.css
@@ -143,3 +143,39 @@ img {
     font-size: 30px;
   }
 }
+@media only screen and (min-device-width: 375px) and (max-device-width: 914px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: landscape) {
+  body {
+    text-align: center;
+  }
+  h1 {
+    font-size: 25px;
+    margin: 10px auto;
+  }
+  h2 {
+    font-size: 30px;
+    line-height: 1.5;
+    margin: 10px auto;
+  }
+  h3 {
+    font-size: 18px;
+  }
+  .contact-about {
+    font-size: 13px;
+  }
+  .app-link {
+    font-size: 12px;
+  }
+  p {
+    font-size: 15px;
+    line-height: 1.1;
+  }
+  .img-on-contact-page {
+    width: 290px;
+  }
+  .row {
+    margin: 30px;
+  }
+  .contact-me {
+    font-size: 30px;
+  }
+}
