--- a/src/style.css
+++ b/src/style.css
@@ -109,7 +109,14 @@ img {
 }
 @media (max-width: 576px) {
   body {
+    margin-top: 60px;
     text-align: center;
+  }
+  .navbar-brand {
+    font-size: 18px;
+  }
+  .navbar-nav {
+    font-size: 15px;
   }
   h1 {
     font-size: 25px;
@@ -145,7 +152,14 @@ img {
 }
 @media only screen and (min-device-width: 375px) and (max-device-width: 914px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: landscape) {
   body {
+    margin-top: 60px;
     text-align: center;
+  }
+  .navbar-brand {
+    font-size: 18px;
+  }
+  .navbar-nav {
+    font-size: 15px;
   }
   h1 {
     font-size: 25px;
