--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,14 @@
 :root {
-  --primary-color-text: #7d3780;
-  --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+  --primary-color-text: #5b2e5de3;
+  --box-shadow: 0px 0px 10px 0px rgba(97, 66, 93, 0.357);
 }
 body {
   font-family: "Roboto", sans-serif;
-  background-color: #f9f7fe;
   background-image: url("/images/back2.png");
   background-size: 100%;
   background-attachment: fixed;
   background-repeat: no-repeat;
+  background-size: cover;
 }
 .hero {
   padding: 200px;
@@ -30,17 +30,12 @@ h1 {
   letter-spacing: 0.1em;
 }
 h2 {
-  font-size: 35px;
-  color: var(--primary-color-text);
-  font-weight: 300;
-}
-h3 {
   font-size: 20px;
   color: var(--primary-color-text);
   opacity: 0.8;
   font-weight: 300;
 }
-h4 {
+h3 {
   font-size: 35px;
   color: var(--primary-color-text);
   font-weight: 400;
@@ -58,11 +53,12 @@ h4 {
   background-color: var(--primary-color-text);
   padding: 15px 20px;
   border-radius: 5px;
-  box-shadow: 5px 5px 5px rgb(85 28 96);
+  box-shadow: var(--box-shadow);
   cursor: pointer;
   color: white;
-  text-transform: capitalize;
   text-decoration: none;
+  width: 140px;
+  text-align: center;
 }
 .link-primary:hover {
   transform: scale(1.1);
@@ -71,27 +67,27 @@ h4 {
   text-decoration: none;
 }
 .link-secondary {
-  border: 1px solid var(--primary-color-text);
+  border: 1px solid #5b2e5d85;
   padding: 15px 20px;
   border-radius: 5px;
-  box-shadow: -5px 5px 5px rgb(131 72 143);
+  box-shadow: var(--box-shadow);
   cursor: pointer;
   color: var(--primary-color-text);
-  text-transform: capitalize;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   text-decoration: none;
 }
 .link-secondary:hover {
-  transform: scale(1.1);
-  opacity: 0.8;
   text-decoration: none;
   color: var(--primary-color-text);
 }
 .app-link {
-  font-size: 12px;
+  max-width: 200px;
+}
+.app-link:hover {
+  transform: scale(1.05);
 }
 .container {
-  max-width: 1000px;
+  max-width: 1100px;
 }
 .border {
   color: var(--primary-color-text) !important;
@@ -120,26 +116,29 @@ p {
   text-decoration: none;
 }
 .row {
-  background: linear-gradient(0.25turn, #dbf7efa3, #f4ffec, #fff2e3d1);
-  border-radius: 15px;
+  background: rgba(255, 255, 255, 0.572);
+  border-radius: 5px;
   max-height: 600px;
 }
 img {
-  box-shadow: 0px 0px 10px 0px rgba(199, 199, 199, 0.5);
+  box-shadow: var(--box-shadow);
 }
 @media (max-width: 576px) {
   body {
     margin-top: 60px;
     text-align: center;
   }
-  .backgroung-heading {
-    padding: 0px;
+  .hero {
+    padding: 50px;
+  }
+  .navbar {
+    height: 55px;
   }
   .navbar-brand {
-    font-size: 15px;
+    font-size: 25px;
   }
   .navbar-nav {
-    font-size: 10px;
+    font-size: 15px;
   }
   h1 {
     font-size: 30px;
@@ -147,63 +146,70 @@ img {
     margin: 10px auto;
   }
   h2 {
-    font-size: 25px;
+    font-size: 22px;
     margin: 10px auto;
   }
   h3 {
-    font-size: 18px;
+    font-size: 22px;
   }
   .contact-about {
     font-size: 13px;
   }
   .app-link {
     font-size: 12px;
+    margin: auto;
   }
   p {
     font-size: 15px;
     line-height: 1.1;
   }
   .img-on-contact-page {
-    width: 290px;
+    width: 290px auto;
   }
   .row {
-    margin: 30px;
+    margin: 20px;
   }
   .contact-me {
     font-size: 30px;
   }
 }
-@media only screen and (min-device-width: 375px) and (max-device-width: 914px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: landscape) {
+@media only screen and (min-device-width: 414px) and (max-device-width: 914px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: landscape) {
   body {
     margin-top: 60px;
-    text-align: center;
   }
   .backgroung-heading {
     padding: 0px;
   }
+  .hero {
+    padding: 50px;
+  }
+  .navbar {
+    height: 55px;
+  }
   .navbar-brand {
-    font-size: 15px;
+    font-size: 25px;
   }
   .navbar-nav {
-    font-size: 10px;
+    font-size: 15px;
   }
-  h1 {
+ h1 {
     font-size: 30px;
     line-height: 1.5;
     margin: 10px auto;
   }
   h2 {
-    font-size: 25px;
+    font-size: 22px;
     margin: 10px auto;
   }
   h3 {
-    font-size: 18px;
+    font-size: 22px;
   }
   .contact-about {
     font-size: 13px;
   }
   .app-link {
     font-size: 12px;
+    margin: 0;
   }
   p {
     font-size: 15px;
@@ -213,7 +219,7 @@ img {
     width: 290px;
   }
   .row {
-    margin: 30px;
+    margin: 20px;
   }
   .contact-me {
     font-size: 30px;
