--- a/src/style-about-page.css
+++ b/src/style-about-page.css
@@ -21,40 +21,51 @@ body {
   font-size: 16px;
 }
 h1 {
-  font-size: 40px;
-  font-weight: 300 !important;
+  font-size: 50px;
+  font-weight: 400 !important;
   letter-spacing: 0.1em;
 }
 h2 {
-  font-size: 20px;
+  font-size: 25px;
   color: var(--primary-color-text);
-  opacity: 0.8;
+  opacity: 0.7;
   font-weight: 300;
   margin-top: 40px;
 }
+p {
+  font-size: 18px;
+  margin-top: 40px;
+}
 .container-1 {
-  -moz-box-align: center;
   max-width: 1100px;
   margin-top: 200px;
   margin-left: 400px;
+  height: 500px;
 }
 .img-photo {
   width: 250px;
+  border-color: var(--primary-color-text) !important;
 }
-.border {
-  color: var(--primary-color-text) !important;
-  border-radius: 15px;
+.btn-works {
+  width: 165px;
+  margin-top: 20px;
+  background-color: var(--primary-color-text);
+  padding: 10px 20px;
+  border-radius: 5px;
+  box-shadow: var(--box-shadow);
+  cursor: pointer;
+  color: rgb(255, 255, 255);
 }
-p {
-  font-size: 15px;
-  line-height: 1.5;
-  margin-top: 30px;
-  max-width: 400px;
+.btn-works:hover {
+  transform: scale(1.05);
+  opacity: 0.8;
+  color: white;
+  text-decoration: none;
 }
+
 .contact-me {
-  text-align: center;
   font-weight: bold;
-  font-size: 50px;
+  font-size: 40px;
 }
 .email-contact {
   text-align: center;
@@ -68,11 +79,7 @@ p {
 .contact-link {
   text-decoration: none;
 }
-.row {
-  background: rgba(255, 255, 255, 0.572);
-  border-radius: 5px;
-  max-height: 600px;
-}
+
 .footer-img {
   width: 30px;
 }
