--- a/src/style-about-page.css
+++ b/src/style-about-page.css
@@ -20,31 +20,34 @@ body {
 .navbar-nav {
   font-size: 16px;
 }
-h1 {
+.about-hero {
+  padding: 160px 20px;
+}
+.about-hero h1 {
   font-size: 50px;
   font-weight: 400 !important;
   letter-spacing: 0.1em;
 }
-h2 {
+.about-hero h2 {
   font-size: 25px;
   color: var(--primary-color-text);
   opacity: 0.7;
   font-weight: 300;
   margin-top: 40px;
 }
-p {
+.about-hero p {
   font-size: 18px;
   margin-top: 40px;
 }
-.container-1 {
-  max-width: 1100px;
-  margin-top: 200px;
-  margin-left: 400px;
-  height: 500px;
+footer h3 {
+  font-weight: 400;
 }
-.img-photo {
-  width: 250px;
-  border-color: var(--primary-color-text) !important;
+footer p {
+  color: var(--primary-color-text);
+}
+.img-about-page {
+  max-width: 350px;
+  border-radius: 5px;
 }
 .btn-works {
   width: 165px;
@@ -62,120 +65,67 @@ p {
   color: white;
   text-decoration: none;
 }
-
+.contact-box {
+  background-color: rgba(255, 255, 255, 0.572);
+  padding: 20px;
+  border-radius: 10px;
+}
 .email-contact {
-  font-size: 25px;
+  font-size: 22px;
 }
 .contact-me-icon {
   font-size: 30px;
   text-align: center;
 }
-.contact-link {
+footer .contact-link {
   text-decoration: none;
+  color: black;
+}
+footer .contact-link:hover {
+  color: #ed5b69;
 }
 
 .footer-img {
   width: 30px;
 }
-@media (max-width: 576px) {
+@media (max-width: 900px) {
   body {
     margin-top: 60px;
     text-align: center;
     background-position: center;
   }
-  .hero {
-    padding: 50px;
-  }
   .navbar {
     height: 55px auto;
   }
   .navbar-brand {
-    font-size: 25px;
+    font-size: 20px;
   }
   .navbar-nav {
     font-size: 15px;
   }
-  h1 {
+  .navbar-collapse {
+    background-color: #ffffffe2;
+    border-radius: 5px;
+  }
+  .about-hero {
+    padding: 20px 0px;
+  }
+  .about-hero h1 {
     font-size: 30px;
-    line-height: 1.5;
     margin: 10px auto;
   }
-  h2 {
-    font-size: 22px;
+  .about-hero h2 {
+    font-size: 20px;
     margin: 10px auto;
   }
-  h3 {
-    font-size: 22px;
-  }
-  .contact-about {
-    font-size: 13px;
-  }
-  .app-link {
+  .about-hero p {
     font-size: 12px;
-    margin: auto;
-  }
-  p {
-    font-size: 15px;
     line-height: 1.1;
   }
-  .img-on-contact-page {
-    width: 290px auto;
-  }
-  .row {
-    margin: 20px;
-  }
-  .contact-me {
-    font-size: 30px;
-  }
-}
-@media only screen and (min-device-width: 414px) and (max-device-width: 914px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: landscape) {
-  body {
-    margin-top: 60px;
-    background-position: center;
-  }
-  .hero {
-    padding: 0px;
-  }
-  .hero {
-    padding: 50px;
-  }
-  .navbar {
-    height: 55px auto;
-  }
-  .navbar-brand {
-    font-size: 25px;
-  }
-  .navbar-nav {
-    font-size: 15px;
-  }
-  h1 {
-    font-size: 30px;
-    line-height: 1.5;
-    margin: 10px auto;
-  }
-  h2 {
-    font-size: 22px;
-    margin: 10px auto;
-  }
-  h3 {
-    font-size: 22px;
-  }
-  .contact-about {
-    font-size: 13px;
-  }
-  .app-link {
-    font-size: 12px;
-    margin: 0;
-  }
-  p {
-    font-size: 15px;
-    line-height: 1.1;
-  }
-  .img-on-contact-page {
-    width: 290px;
-  }
-  .row {
-    margin: 20px;
+  .img-about-page {
+    margin-top: 30px;
+    max-width: 200px;
+    border-radius: 5px;
   }
   .contact-me {
     font-size: 30px;
