--- a/src/style.css
+++ b/src/style.css
@@ -103,7 +103,17 @@ p {
   border-radius: 5px;
 }
 .footer-img {
-  width: 30px;
+  width: 35px;
+}
+footer .social-links a {
+  margin: 0 20px;
+  border-radius: 50%;
+  font-size: 18px;
+  transition: all 100ms ease-in-out;
+}
+footer .social-links a:hover {
+  transform: scale(1.2);
+  background-color: #5b2e5d69;
 }
 @media (max-width: 900px) {
   body {
