--- a/src/style-all-page.css
+++ b/src/style-all-page.css
@@ -165,6 +165,9 @@ footer .social-links a:hover {
     font-size: 28px;
     letter-spacing: 1px !important;
   }
+  .content h1.contact-page {
+    font-size: 28px;
+  }
   .content h2 {
     font-size: 20px;
     margin: 15px auto;
@@ -193,5 +196,8 @@ footer .social-links a:hover {
   }
   .contact-box {
     display: none !important;
+  }
+  footer .social-links {
+    margin-top: 20px;
   }
 }
