--- a/src/style.css
+++ b/src/style.css
@@ -128,10 +128,14 @@ footer .social-links a:hover {
     height: 55px auto;
   }
   .navbar-brand {
-    font-size: 25px;
+    font-size: 20px;
   }
   .navbar-nav {
     font-size: 15px;
+  }
+  .navbar-collapse {
+    background-color: #ffffffe2;
+    border-radius: 5px;
   }
   h1 {
     font-size: 30px;
