--- a/src/style.css
+++ b/src/style.css
@@ -40,6 +40,9 @@ h3 {
   color: var(--primary-color-text);
   font-weight: 300;
 }
+h4 {
+  font-weight: 300;
+}
 .contact-about {
   display: flex;
   justify-content: center;
@@ -100,6 +103,27 @@ p {
 .row {
   background: rgba(255, 255, 255, 0.572);
   border-radius: 5px;
+}
+.contact-box {
+  background-color: rgba(255, 255, 255, 0.12);
+  padding: 20px;
+  border-radius: 5px;
+}
+footer .btn-works {
+  margin-top: 10px;
+}
+.btn-works {
+  width: 165px;
+  margin-top: 65px;
+  background-color: var(--primary-color-text);
+  padding: 10px 20px;
+  border-radius: 5px;
+  box-shadow: var(--box-shadow);
+  cursor: pointer;
+  color: rgb(255, 255, 255);
+}
+footer p {
+  color: var(--primary-color-text);
 }
 .footer-img {
   width: 35px;
