--- a/src/style.css
+++ b/src/style.css
@@ -124,6 +124,7 @@ footer .btn-works {
 }
 footer p {
   color: var(--primary-color-text);
+  font-size: 17px;
 }
 .footer-img {
   width: 35px;
@@ -189,5 +190,8 @@ footer .social-links a:hover {
   }
   .contact-me {
     font-size: 30px;
+  }
+  .contact-box {
+    display: none !important;
   }
 }
