--- a/src/style-all-page.css
+++ b/src/style-all-page.css
@@ -79,6 +79,9 @@ footer h4 {
 footer p {
   color: var(--primary-color-text);
 }
+.footer-end {
+  margin-top: 30px;
+}
 .img-about-page {
   max-width: 350px;
   border-radius: 5px;
@@ -175,6 +178,11 @@ footer .social-links a:hover {
   .content p {
     font-size: 15px;
     line-height: 1.1;
+  }
+  footer p.footer-end {
+    margin-top: 20px;
+    padding: 10px 55px;
+    font-size: 16px;
   }
   .btn-works {
     font-size: 15px;
