--- a/src/style.css
+++ b/src/style.css
@@ -41,7 +41,10 @@ h3 {
   font-weight: 300;
 }
 h4 {
+  margin-bottom: 25px;
   font-weight: 300;
+  font-size: 20px;
+  color: var(--primary-color-text);
 }
 .contact-about {
   display: flex;
@@ -126,6 +129,9 @@ footer p {
   color: var(--primary-color-text);
   font-size: 17px;
 }
+.footer-end {
+  margin-top: 30px;
+}
 .footer-img {
   width: 35px;
 }
@@ -174,6 +180,9 @@ footer .social-links a:hover {
     font-size: 22px;
     font-weight: 300;
   }
+  h4 {
+    font-size: 17px;
+  }
   .contact-about {
     font-size: 10px;
   }
@@ -184,6 +193,11 @@ footer .social-links a:hover {
   p {
     font-size: 13px;
     line-height: 1.1;
+  }
+  footer p.footer-end {
+    margin-top: 20px;
+    padding: 10px 55px;
+    font-size: 16px;
   }
   .row {
     margin: 20px;
