--- a/src/style-all-page.css
+++ b/src/style-all-page.css
@@ -118,6 +118,13 @@ footer p {
 footer .btn-works {
   margin-top: 10px;
 }
+footer p {
+  color: var(--primary-color-text);
+  font-size: 17px;
+}
+.footer-end {
+  margin-top: 30px;
+}
 footer .contact-link {
   text-decoration: none;
   color: black;
