--- a/src/style.css
+++ b/src/style.css
@@ -73,6 +73,7 @@ h4 {
   font-weight: 300;
   font-size: 20px;
   color: var(--primary-color-text);
+  opacity: 0.9;
 }
 .contact-about {
   display: flex;
