--- a/src/style.css
+++ b/src/style.css
@@ -12,7 +12,6 @@ body {
 }
 
 .navbar {
-  background-color: #ffffffca;
   height: 55px;
 }
 .navbar-brand {
@@ -22,7 +21,7 @@ body {
   font-size: 16px;
 }
 .hero {
-  padding: 200px;
+  padding: 220px;
 }
 .wrapper {
   height: 30px;
@@ -61,7 +60,7 @@ h1 {
 h2 {
   font-size: 22px;
   color: var(--primary-color-text);
-  opacity: 0.8;
+  opacity: 0.9;
   font-weight: 300;
 }
 h3 {
@@ -84,26 +83,25 @@ h4 {
   margin: 15px;
 }
 .link-primary {
-  border: 1px solid var(--primary-color-text);
+  width: 165px;
+  padding: 10px 20px;
   background-color: var(--primary-color-text);
-  padding: 15px 20px;
   border-radius: 5px;
   box-shadow: var(--box-shadow);
   cursor: pointer;
-  color: white;
   text-decoration: none;
-  width: 140px;
   text-align: center;
+  color: rgb(255, 255, 255);
 }
 .link-primary:hover {
-  transform: scale(1.1);
-  opacity: 0.8;
-  color: white;
+  transform: scale(1.05);
+  background-color: white;
+  color: var(--primary-color-text);
   text-decoration: none;
 }
 .link-secondary {
   border: 1px solid #5b2e5d85;
-  padding: 15px 20px;
+  padding: 10px 20px;
   border-radius: 5px;
   box-shadow: var(--box-shadow);
   cursor: pointer;
@@ -112,14 +110,11 @@ h4 {
   text-decoration: none;
 }
 .link-secondary:hover {
-  text-decoration: none;
-  color: var(--primary-color-text);
-}
-.app-link {
-  max-width: 200px;
-}
-.app-link:hover {
   transform: scale(1.05);
+  text-decoration: none;
+  background-color: var(--primary-color-text);
+  color: rgb(255, 255, 255);
+  font-weight: 300;
 }
 .container {
   max-width: 1100px;
@@ -128,9 +123,10 @@ h4 {
   color: var(--primary-color-text) !important;
   border-radius: 15px;
 }
-p {
+.text-dark {
   font-size: 15px;
   line-height: 1.5;
+  font-family: "Poppins", sans-serif !important;
 }
 .row {
   background: rgba(255, 255, 255, 0.572);
